feat: 优化评估功能并增加追问支持
- 在评估页面增加范例展示和追问功能，提升用户体验
- 重构 OpenAI 客户端创建逻辑，支持动态配置
- 更新 `pnpm-lock.yaml` 中的依赖版本
- 在测试页面增加 API 配置输入框

--- a/node-sse2socket/package.json
+++ b/node-sse2socket/package.json
@@ -1,13 +1,13 @@
 {
   "name": "node-sse2socket",
   "version": "1.0.0",
-  "description": "",
+  "description": "A simple server-sent events to socket.io bridge",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "null_object_0000",
   "license": "ISC",
   "dependencies": {
     "openai": "^4.89.0",
