--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4050620250312001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4050620250312001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4050620250312001",
+    "dijkstrajs": "^1.0.3",
+    "qrcode": "^1.5.4",
     "vue": "^3.5.13",
     "vue-i18n": "^9.14.3"
   },
@@ -59,6 +61,7 @@
     "@dcloudio/uni-cli-shared": "3.0.0-4050620250312001",
     "@dcloudio/uni-stacktracey": "3.0.0-4050620250312001",
     "@dcloudio/vite-plugin-uni": "3.0.0-4050620250312001",
+    "@types/qrcode": "^1.5.5",
     "@vue/runtime-core": "^3.5.13",
     "@vue/tsconfig": "^0.1.3",
     "typescript": "^4.9.4",
