--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       run: pnpm install --frozen-lockfile
 
     - name: Build project
-      run: pnpm run build
+      run: pnpm run build:h5
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
