feat: 在manifest.json中添加h5路由配置
为H5平台添加了路由配置，包括模式设置为hash和基础路径为/newbie-drill-quest，以支持H5环境下的路由功能。

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,5 +14,11 @@
         },
         "usingComponents" : true
     },
+    "h5":{
+        "router":{
+            "mode": "hash",
+            "base": "/newbie-drill-quest"
+        }
+    },
     "vueVersion" : "3"
 }
