fix(路由配置): 修正manifest.json中路由base路径的斜杠问题
修复了manifest.json中路由base路径缺少尾部斜杠的问题，确保路由解析正确。同时，统一了pages.json中图标路径的格式，移除多余的斜杠，保持路径一致性。

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
     "h5":{
         "router":{
             "mode": "hash",
-            "base": "/newbie-drill-quest"
+            "base": "/newbie-drill-quest/"
         }
     },
     "vueVersion" : "3"
