--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-4050620250312001",
     "@dcloudio/uni-mp-xhs": "3.0.0-4050620250312001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-4050620250312001",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-i18n": "^9.14.3"
   },
